# ctxproof

./: PROOF.md  README.md  install.sh
.github/workflows/: ctxproof-check.yml
CtxProof/: .gitignore  build.sh  ctxproof.opam  dune-project
CtxProof/data/: hello  proof1
CtxProof/data/correct/: proof1  proof10  proof11  proof12  proof13  proof14  proof15  proof16  proof17  proof2  proof3  proof4  proof5  proof6  proof7  proof8  proof9
CtxProof/data/incorrect/: nproof1  nproof10  nproof11  nproof12  nproof13  nproof14  nproof15  nproof16  nproof17  nproof2  nproof3  nproof4  nproof5  nproof6  nproof7  nproof8  nproof9
CtxProof/lib/: dune  fof_utils.ml  kernel.ml  lexer.mll  parser.messages  parser.mly  printer.ml  proof.ml  types.ml
CtxProof/lib/utils/: errors.ml  fof_utils.ml  parser_utils.ml
CtxProof/test/: dune  test_CtxProof.ml  test_main.ml  tutils.ml
CtxProof/test/fof/: test_logic_ops.ml  test_proof.ml
CtxProof/test/parser/: test_fof_negative.ml  test_fof_positive.ml  test_line.ml
examples/: hello  trivial
spec/: foundations.tex  kernel.tex  references.bib
